--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -168,30 +168,7 @@
 
     <section style="padding: 0 20px;">
         <div class="promotion-container container-fluid">
-            <div id="promotions" class="row">
-                <div class="col-md-4">
-                    <div class="panel panel-default panel-promotion">
-                        <div class="panel-body" style="padding: 5px 15px;">
-                            <div class="container-img-cost" style="position: relative">
-                                <div class="promotion-information">
-                                    <h2 class="promotion-title">Nombre de la promoción</h2>
-                                    <p class="promotion-cost">$4700 COP</p>
-                                    <p class="promotion-description">decripcion del producto con un mensaje corto decripcion del producto con un mensaje corto</p>
-                                    <button type="button" class="btn btn-md default btn-show-promotion">Ver promoción</button>
-                                </div>
-                                <div class="container-image">
-                                    <div class="relative-container">
-                                        <div class="rotate-container">
-                                            <img src="https://files.informabtl.com/uploads/2016/02/promociones.jpg" alt="Ejemplo de imagen" style="width: 100%;">
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div id="promotions" class="row"></div>
         </div>
         <div class="pagination" style="text-align: center; padding: 0 20px; width: 100%;">
             <nav aria-label="Page navigation">
@@ -248,7 +225,7 @@
                 var getData = data;
                 for( var i=0; i<getData.length; i++){
                    var fields =  getData[i].fields;
-                    $("#promotions").html("").append(
+                    $("#promotions").append(
                         "<div class='col-md-4'>" +
                             "<div class='panel panel-default panel-promotion'>" +
                                 "<div class='panel-body' style='padding: 5px 15px;'>" +
