Agregando estilos a lo nabvar

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -96,7 +96,7 @@
 <body>
 
     <header >
-        <nav class="navbar navbar-default" style="margin-bottom: 0;">
+        <nav class="navbar navbar-inverse" style="margin-bottom: 0;border-radius: 0;">
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="collapsed navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-3" aria-expanded="false">
@@ -126,7 +126,7 @@
     </header>
 
 
-    <nav class="navbar navbar-default" style="padding-top: 7px;">
+    <nav class="navbar navbar-inverse" style="padding-top: 7px;border-radius: 0;">
         <div class="container-fluid">
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <div class="row">
