Se quitaron los dos del slider del header

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -278,7 +278,7 @@
             });
 
             $('.header-slide').slick({
-                dots: true,
+                dots: false,
                 infinite: true,
                 speed: 500,
                 fade: true,
