Se quitaron los arrows del slider

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -278,7 +278,8 @@
             });
 
             $('.header-slide').slick({
-                dots: false,
+                dots: true,
+                arrows: false,
                 infinite: true,
                 speed: 500,
                 fade: true,
