Se corrigieron los padding de los containers fuild

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -97,7 +97,7 @@
 
     <header >
         <nav class="navbar navbar-inverse" style="margin-bottom: 0;border-radius: 0;">
-            <div class="container-fluid">
+            <div class="container-fluid" style="padding-left: 40px; padding-right: 40px;">
                 <div class="navbar-header">
                     <button type="button" class="collapsed navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-3" aria-expanded="false">
                         <span class="sr-only">Toggle navigation</span>
@@ -127,7 +127,7 @@
 
 
     <nav class="navbar navbar-inverse" style="padding-top: 7px;border-radius: 0;">
-        <div class="container-fluid">
+        <div class="container-fluid" style="padding-right: 40px; padding-left: 40px;">
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <div class="row">
                     <div class="col-md-2">
