Poniendo estilos a los dots del slidet

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -23,6 +23,16 @@
         .slick-dots {
             bottom: 0px;
         }
+        .slick-dots button {
+          display: block;
+          width: 1rem;
+          height: 1rem;
+          padding: 0;
+          border: none;
+          border-radius: 100%;
+          background-color: blue;
+          text-indent: -9999px;
+        }
         .slick-dotted.slick-slider {
             margin-bottom: 0;
         }
