Se corrigieron los padding de los containers fuild

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -30,8 +30,11 @@
           padding: 0;
           border: none;
           border-radius: 100%;
-          background-color: blue;
+          background-color: #FFFFFF !important;
           text-indent: -9999px;
+        }
+        .slick-dots li button:hover, .slick-dots li button:focus, .slick-dots li.slick-active button {
+          background-color: #333333 !important;
         }
         .slick-dotted.slick-slider {
             margin-bottom: 0;
