--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -31,7 +31,8 @@
           border: none;
           border-radius: 100%;
           background-color: #FFFFFF !important;
-          text-indent: -9999px;
+          box-shadow: inset 0 1px 1px 0 #999 !important;
+          text-indent: -999px;
         }
         .slick-dots li button:hover, .slick-dots li button:focus, .slick-dots li.slick-active button {
           background-color: #333333 !important;
