--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -21,7 +21,7 @@
             height: 660px;
         }
         .slick-dots {
-            bottom: 0px;
+            bottom: 20px;
         }
         .slick-dots button {
           display: block;
@@ -30,12 +30,13 @@
           padding: 0;
           border: none;
           border-radius: 100%;
-          background-color: #FFFFFF !important;
+          background-color: #efe4e4 !important;
           box-shadow: inset 0 1px 1px 0 #999 !important;
           text-indent: -999px;
         }
         .slick-dots li button:hover, .slick-dots li button:focus, .slick-dots li.slick-active button {
           background-color: #333333 !important;
+          box-shadow: inset 0 1px 1px 0 #555 !important;
         }
         .slick-dotted.slick-slider {
             margin-bottom: 0;
