Agregando shadows a los dots del slider

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -23,7 +23,7 @@
         .slick-dots {
             bottom: 20px;
         }
-        .slick-dots button {
+        .slick-dots li button {
           display: block;
           width: 1rem;
           height: 1rem;
