--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -25,14 +25,13 @@
         }
         .slick-dots li button {
           display: block;
-          width: 1rem;
-          height: 1rem;
+          width: 20px;
+          height: 20px;
           padding: 0;
           border: none;
           border-radius: 100%;
           background-color: #efe4e4 !important;
           box-shadow: inset 0 1px 1px 0 #999 !important;
-          text-indent: -999px;
         }
         .slick-dots li button:hover, .slick-dots li button:focus, .slick-dots li.slick-active button {
           background-color: #333333 !important;
