Actualizando imagenes al slider

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -133,9 +133,9 @@
             </div>
         </nav>
         <div class="header-slide">
-            <div><img style="width: 100%;" src="https://devcdn.digitalchalk.com/wp-content/uploads/2015/07/digitalchalk-top-10-html5-elearning-authoring-tools-robert-morris-1.png" alt="image html5 ejemplo"></div>
-            <div><img style="width: 100%;" src="https://www.aprendoencasa.com/wp-content/uploads/2012/06/html5.jpg" alt="image html5 ejemplo"></div>
             <div><img style="width: 100%;" src="https://cdn.lynda.com/course/473879/473879-636457524814693787-16x9.jpg" alt="image html5 ejemplo"></div>
+            <div><img style="width: 100%;" src="https://havenshop.com/wp-content/uploads/2014/11/Black-Weekend-Sale.jpg" alt="image html5 ejemplo"></div>
+            <div><img style="width: 100%;" src="https://i0.wp.com/www.shari-alexander.com/wp-content/uploads/2015/05/IMG_0335.jpg" alt="image html5 ejemplo"></div>
         </div>
     </header>
 
