--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -135,7 +135,7 @@
         <div class="header-slide">
             <div><img style="width: 100%;" src="https://cdn.lynda.com/course/473879/473879-636457524814693787-16x9.jpg" alt="image html5 ejemplo"></div>
             <div><img style="width: 100%;" src="https://havenshop.com/wp-content/uploads/2014/11/Black-Weekend-Sale.jpg" alt="image html5 ejemplo"></div>
-            <div><img style="width: 100%;" src="https://i0.wp.com/www.shari-alexander.com/wp-content/uploads/2015/05/IMG_0335.jpg" alt="image html5 ejemplo"></div>
+            <div><img style="width: 100%;" src="https://i1.wp.com/www.tafelberg.co.za/wp-content/uploads/2016/09/daily-deals-current-promotions.jpg" alt="image html5 ejemplo"></div>
         </div>
     </header>
 
