Actualizando imagenes al slider

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -134,7 +134,7 @@
         </nav>
         <div class="header-slide">
             <div><img style="width: 100%;" src="https://cdn.lynda.com/course/473879/473879-636457524814693787-16x9.jpg" alt="image html5 ejemplo"></div>
-            <div><img style="width: 100%;" src="https://havenshop.com/wp-content/uploads/2014/11/Black-Weekend-Sale.jpg" alt="image html5 ejemplo"></div>
+            <div><img style="width: 100%;" src="http://www.gigabyte.eu/MicroSite/467/images/17-Cashback_banner_1920.jpg" alt="image html5 ejemplo"></div>
             <div><img style="width: 100%;" src="http://www.kimberley.co.za/wp-content/uploads/2017/06/29628_Debonairs_Pizza-Cram_Your_Crust-Special-PM-201706-1.jpg" alt="image html5 ejemplo"></div>
         </div>
     </header>
