Actualizando imagenes al slider

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -134,7 +134,7 @@
         </nav>
         <div class="header-slide">
             <div><img style="width: 100%;" src="https://cdn.lynda.com/course/473879/473879-636457524814693787-16x9.jpg" alt="image html5 ejemplo"></div>
-            <div><img style="width: 100%;" src="https://www.broadfield.com/news/wp-content/uploads/2017/10/USD-SUMO19-SUNHOOD-960x500.jpg" alt="image html5 ejemplo"></div>
+            <div><img style="width: 100%;" src="http://gaming.gigabyte.eu/AMDmotherboard/images/AMD_mb_board_noLED_1920.jpg" alt="image html5 ejemplo"></div>
             <div><img style="width: 100%;" src="http://www.kimberley.co.za/wp-content/uploads/2017/06/29628_Debonairs_Pizza-Cram_Your_Crust-Special-PM-201706-1.jpg" alt="image html5 ejemplo"></div>
         </div>
     </header>
