Actualizando imagenes al slider

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -135,7 +135,7 @@
         <div class="header-slide">
             <div><img style="width: 100%;" src="https://cdn.lynda.com/course/473879/473879-636457524814693787-16x9.jpg" alt="image html5 ejemplo"></div>
             <div><img style="width: 100%;" src="http://gaming.gigabyte.eu/AMDmotherboard/images/AMD_mb_board_noLED_1920.jpg" alt="image html5 ejemplo"></div>
-            <div><img style="width: 100%;" src="http://www.kimberley.co.za/wp-content/uploads/2017/06/29628_Debonairs_Pizza-Cram_Your_Crust-Special-PM-201706-1.jpg" alt="image html5 ejemplo"></div>
+            <div><img style="width: 100%;" src="http://www.kimberley.co.za/wp-content/uploads/2017/06/29621_Fish_Aways-Hash_Brown_Burger_Special-PM-201706.jpg" alt="image html5 ejemplo"></div>
         </div>
     </header>
 
@@ -218,7 +218,7 @@
                 <p>City</p>
             </div>
             <div class="col-md-4" style="text-align: center">
-                <p>CPromotion - Bogotá | 2018 | All rights reserved</p>
+                <p>cPromotion - Bogotá | 2018 | All rights reserved</p>
                 <p>Street 21 Ave 24A - 73</p>
                 <p>cpromotion@email.com</p>
             </div>
