Consultado datos despues de visualizarlos en la pagina

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -293,7 +293,7 @@
                 var err = textStatus + ", " + error;
             });
 
-            console.log(var);
+            console.log(getData);
 
             $('.header-slide').slick({
                 dots: true,
