Consultado datos despues de visualizarlos en la pagina

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -272,7 +272,7 @@
                                             "<h2 class='promotion-title'>" + fields.promotion_name + "</h2>" +
                                             "<p class='promotion-cost'> $" + fields.cost + "</p>" +
                                             "<p class='promotion-description' style='color:"+ promotion_description +";'>" + fields.description + "</p>" +
-                                            "<button type='button' class='btn btn-md default btn-show-promotion' style='color:"+ promotion_background +";'>Ver promoción</button>" +
+                                            "<button id='promotion"+ getData[i].pk +"' class='modal-promotion' type='button' class='btn btn-md default btn-show-promotion' style='color:"+ promotion_background +";'>Ver promoción</button>" +
                                         "</div>" +
                                         "<div class='container-image'>" +
                                             "<div class='relative-container'>" +
