--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -296,7 +296,7 @@
 
             $("#promotions").on("click", ".modal-promotion", function(e){
                 e.preventDefault();
-                var promotionId = this.attr("id");
+                var promotionId = $(this).attr("id");
                 console.log(promotionId);
                 $.getJSON("https://cpromotion.herokuapp.com/list_promotion").done(function(data){
                     var promotionData = data;
