--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -328,6 +328,7 @@
                             );
 
                             $(".modal-box").modal('show');
+                            $(".modal-box").modal({ keyboard: false });
 
                             console.log(getId + "esta es la promocion escogida");
                         }
