Agregando modal al section del modal

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -308,7 +308,7 @@
                         if( parseInt(getId) === parseInt(splitId[1])){
 
                             $("#modal-promotion").html("").append(
-                                "<div class='modal fade modal-box' tabindex='-1' role='dialog'>" +
+                                "<div class='modal fade modal-box' data-backdrop='static' data-keyboard='false' tabindex='-1' role='dialog'>" +
                                     "<div class='modal-dialog' role='document'>" +
                                         "<div class='modal-content'>" +
                                             "<div class='modal-header'>" +
