--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -126,7 +126,19 @@
                             <a href="#">Registrar</a>
                         </li>
                         <li>
-                            <button type="button" class="btn btn-default navbar-btn">Sign in</button>
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                                    Dropdown
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                    <li><a href="#">Action</a></li>
+                                    <li><a href="#">Another action</a></li>
+                                    <li><a href="#">Something else here</a></li>
+                                    <li role="separator" class="divider"></li>
+                                    <li><a href="#">Separated link</a></li>
+                                </ul>
+                            </div>
                         </li>
                     </ul>
                 </div>
