--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -23,6 +23,10 @@
         .slick-dots {
             bottom: 20px;
         }
+        #login-btn {
+            min-width: 280px;
+            padding: 20px;
+        }
         .slick-dots li button {
           display: block;
           width: 20px;
@@ -131,20 +135,16 @@
                                     Dropdown
                                     <span class="caret"></span>
                                 </button>
-                                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                <ul id="login-btn" class="dropdown-menu" aria-labelledby="dropdownMenu1">
                                     <li>
                                         <form class="form-horizontal">
                                             <div class="form-group">
-                                                <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
-                                                <div class="col-sm-10">
-                                                    <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-                                                </div>
+                                                <label for="exampleInputEmail1">Email address</label>
+                                                <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
                                             </div>
                                             <div class="form-group">
-                                                <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
-                                                <div class="col-sm-10">
-                                                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
-                                                </div>
+                                                <label for="exampleInputPassword1">Password</label>
+                                                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                                             </div>
                                             <div class="form-group">
                                                 <div class="col-sm-offset-2 col-sm-10">
@@ -155,6 +155,7 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <hr>
                                             <div class="form-group">
                                                 <div class="col-sm-offset-2 col-sm-10">
                                                     <button type="submit" class="btn btn-default">Sign in</button>
