--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -137,7 +137,7 @@
                                 </button>
                                 <ul id="login-btn" class="dropdown-menu" aria-labelledby="dropdownMenu1">
                                     <li>
-                                        <form class="form-horizontal">
+                                        <form>
                                             <div class="form-group">
                                                 <label for="exampleInputEmail1">Email address</label>
                                                 <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
@@ -147,12 +147,15 @@
                                                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                                             </div>
                                             <div class="form-group">
-                                                <div class="col-sm-offset-2 col-sm-10">
+                                                <div class="col-sm-6">
                                                     <div class="checkbox">
                                                         <label>
                                                             <input type="checkbox"> Remember me
                                                         </label>
                                                     </div>
+                                                </div>
+                                                <div class="col-sm-6">
+                                                    <a href="#" id="lost-password">Lost your password?</a>
                                                 </div>
                                             </div>
                                             <hr>
