Estilos al form del login

--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -24,7 +24,7 @@
             bottom: 20px;
         }
         #login-btn {
-            min-width: 280px;
+            min-width: 340px;
             padding: 20px;
         }
         .slick-dots li button {
@@ -130,7 +130,7 @@
                             <a href="#">Registrar</a>
                         </li>
                         <li>
-                            <div class="dropdown">
+                            <div class="dropdown" style="padding-top: 8px;">
                                 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                                     Dropdown
                                     <span class="caret"></span>
@@ -147,21 +147,21 @@
                                                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                                             </div>
                                             <div class="form-group">
-                                                <div class="col-sm-6">
+                                                <div class="col-sm-6" style="margin-top: -10px; padding-left: 0;">
                                                     <div class="checkbox">
                                                         <label>
                                                             <input type="checkbox"> Remember me
                                                         </label>
                                                     </div>
                                                 </div>
-                                                <div class="col-sm-6">
+                                                <div class="col-sm-6" style="text-align: right; padding-right: 0;">
                                                     <a href="#" id="lost-password">Lost your password?</a>
                                                 </div>
                                             </div>
-                                            <hr>
+                                            <hr style="clear: both;margin-top: 54px; margin-bottom: 20px;">
                                             <div class="form-group">
-                                                <div class="col-sm-offset-2 col-sm-10">
-                                                    <button type="submit" class="btn btn-default">Sign in</button>
+                                                <div class="col-sm-offset-4 col-sm-8">
+                                                    <button type="submit" class="btn btn-default btn-block">Sign in</button>
                                                 </div>
                                             </div>
                                         </form>
