--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -147,7 +147,7 @@
                                                 <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                                             </div>
                                             <div class="form-group">
-                                                <div class="col-sm-6" style="margin-top: -10px; padding-left: 0;">
+                                                <div class="col-sm-6" style="margin-top: -10px; padding-right: 0;">
                                                     <div class="checkbox">
                                                         <label>
                                                             <input type="checkbox"> Remember me
