--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -132,7 +132,7 @@
                         <li>
                             <div class="dropdown" style="padding-top: 8px;">
                                 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                    Login
+                                    Logincd <web></web>
                                     <span class="caret"></span>
                                 </button>
                                 <ul id="login-btn" class="dropdown-menu" aria-labelledby="dropdownMenu1">
