--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -127,12 +127,12 @@
                 <div class="navbar-right" id="" style="padding-right: 10px;">
                     <ul class="nav navbar-nav navbar-right" style="margin-right: 0;">
                         <li>
-                            <a href="#">Registrar</a>
+                            <a id="btn-register" href="#">Registrar</a>
                         </li>
                         <li>
                             <div class="dropdown" style="padding-top: 8px;">
                                 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                                    Logincd <web></web>
+                                    Login <web></web>
                                     <span class="caret"></span>
                                 </button>
                                 <ul id="login-btn" class="dropdown-menu" aria-labelledby="dropdownMenu1">
@@ -274,7 +274,26 @@
     </footer>
 
     <section id="modal-promotion"></section>
+    <section id="modal-register">
 
+    </section>
+        <div class="modal fade modal-register" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title">Modal title</h4>
+                    </div>
+                    <div class="modal-body">
+                        <p>One fine body&hellip;</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="btn-register-modal-close" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
     <script>
         $(document).ready(function () {
 
@@ -382,6 +401,12 @@
                 e.preventDefault();
                 $(".modal-box").modal('hide');
             });
+
+            $("#btn-register").on("click", function(){
+               $(".modal-register").modal('show');
+            });
+
+            $("#btn-register-modal-close").modal("hide");
 
             $('.header-slide').slick({
                 dots: true,
