--- a/promotions/templates/home/index.html
+++ b/promotions/templates/home/index.html
@@ -285,10 +285,112 @@
                         <h4 class="modal-title">Modal title</h4>
                     </div>
                     <div class="modal-body">
-                        <p>One fine body&hellip;</p>
+                        <form>
+                            <div class="form-group">
+                                <label for="name">Nombre:</label>
+                                <input type="text" class="form-control" id="register-name" placeholder="Su nombre">
+                            </div>
+                            <div class="form-group">
+                                <label for="lastName">Apellidos:</label>
+                                <input type="text" class="form-control" id="register-last-name" placeholder="Sus Apellidos">
+                            </div>
+                            <div class="form-group">
+                                <label for="pais">Pais:</label>
+                                <input type="text" class="form-control" id="register-country" placeholder="País de residencia">
+                            </div>
+                            <div class="form-group">
+                                <label for="ciudad">Ciudad:</label>
+                                <input type="text" class="form-control" id="register-city" placeholder="Ciudad de residencia">
+                            </div>
+                            <div class="form-group">
+                                <label for="direccion">Dirección de correspondencia:</label>
+                                <input type="text" class="form-control" id="register-address" placeholder="Dirección de correspondencia">
+                            </div>
+                            <hr>
+                            <div class="form-group">
+                                <label for="username">Username:</label>
+                                <input type="text" class="form-control" id="register-username" placeholder="Nombre de usuario">
+                            </div>
+                            <div class="form-group">
+                                <label for="password">Contraseña:</label>
+                                <input type="password" class="form-control" id="register-password" placeholder="Contraseña">
+                            </div>
+                            <div class="form-group">
+                                <label for="confirmPassword">Confirmar contraseña:</label>
+                                <input type="password" class="form-control" id="register-confirm-password" placeholder="Confirmar contraseña">
+                            </div>
+                            <div class="form-group">
+                                <label for="email">email:</label>
+                                <input type="email" class="form-control" id="register-email" placeholder="Email">
+                            </div>
+                            <div class="form-group">
+                                <label for="category">Escoger categorias:</label>
+                                <div class="panel panel-default category-modal-container">
+                                    <div id="category-register" class="panel-body row">
+                                        <div class="col-ms-4">
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox"> Check me out
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="col-ms-4">
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox"> Check me out
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="col-ms-4">
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox"> Check me out
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="col-ms-4">
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox"> Check me out
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="col-ms-4">
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox"> Check me out
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="col-ms-4">
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox"> Check me out
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="col-ms-4">
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox"> Check me out
+                                                </label>
+                                            </div>
+                                        </div>
+                                        <div class="col-ms-4">
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox"> Check me out
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <button type="submit" class="btn btn-default">Submit</button>
+                        </form>
                     </div>
                     <div class="modal-footer">
-                        <button id="btn-register-modal-close" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                         <button type="button" class="btn btn-primary">Save changes</button>
                     </div>
                 </div><!-- /.modal-content -->
@@ -405,8 +507,6 @@
             $("#btn-register").on("click", function(){
                $(".modal-register").modal('show');
             });
-
-            $("#btn-register-modal-close").modal("hide");
 
             $('.header-slide').slick({
                 dots: true,
